# test

./: test.py
pyprojects/: pyproject.toml  requirements.txt
pyprojects/pyprojects/: cli.py
