[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprojects"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["typer>=0.12.0", "requests>=2.31.0", "rich>=13.9.0", "yt-dlp>=2025.1.26"]

[project.scripts]
pyprojects = "pyprojects.__main__:app"
